# dmc-1-t3-notebook-api

./: .dockerignore  .env.example  .env.test.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260522_0001_auth_tables.py  20260610_0001_auth_foundation.py  20260616_0002_notebook_persistence.py  20260617_0002_google_oauth_flow.py  20260617_0003_notebook_persistence.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py
app/api/v1/routes/: health.py
app/core/: config.py  errors.py  logging.py  security.py
app/db/: base.py  session.py
app/features/ai/: __init__.py  dependencies.py  errors.py  repository.py  router.py  schemas.py  service.py
app/features/auth/: cookies.py  dependencies.py  errors.py  models.py  rate_limit.py  repository.py  router.py  schemas.py  service.py
app/features/notebooks/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/system/: router.py
app/integrations/: email_delivery.py
app/integrations/ai/: __init__.py  provider.py
app/integrations/email/: service.py
app/integrations/google_oauth/: client.py
docs/: ai_contract.md  ai_runtime_operations.md  api_architecture.md  api_architectureRU.md  auth.md  authRU.md  persistence.md
msd_fastapi_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: auth_helpers.py  conftest.py  factories.py  test_auth.py  test_auth_security.py  test_config.py  test_health.py
tests/integration/: test_canary.py
tests/integration/ai/: test_endpoint.py  test_validation_pipeline.py
tests/integration/auth/: test_auth_fixtures.py  test_google_oauth.py  test_request_otp.py  test_session.py  test_verify_otp.py
tests/integration/notebooks/: test_collection.py  test_delete.py  test_item.py  test_repository.py  test_revision.py  test_sync.py  test_validation.py
tests/integration/system/: test_health.py
tests/unit/: test_canary.py
tests/unit/ai/: test_provider.py  test_service.py
tests/unit/auth/: test_auth_cookies.py  test_auth_dependencies.py  test_request_otp_schemas.py  test_verify_otp_schemas.py
tests/unit/notebooks/: test_models.py  test_schemas.py  test_service_commit.py  test_service_helpers.py
