[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msd-fastapi-template"
version = "0.1.0"
description = "FastAPI starter template for Modern Software Development course"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
