[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msd-fastapi-template"
version = "0.1.0"
description = "FastAPI starter template for Modern Software Development course"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.34.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
env_files = [".env.test"]
markers = [
    "unit: fast, isolated tests without external services",
    "integration: tests that require PostgreSQL and run the full app stack",
]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "-m", "not integration",
    "--junitxml=reports/junit-unit.xml",
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:reports/coverage-unit.xml",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "tests/*",
    "alembic/*",
    "app/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
